[L-29] adds basic functionallity

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,16 @@
   <meta charset="utf-8">
   <title>MediumcloneAngular</title>
   <base href="/">
+  <link
+    rel="stylesheet"
+    href="//demo.productionready.io/main.css"
+    text="text/css"  
+  />
+  <link
+  rel="stylesheet"
+  href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+  text="text/css"  
+/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
